Update assignmentSubmission swagger
